2003-03-10  Gert-Jan Paulissen  <g.paulissen@chello.nl>

        * Create VERSION file from PACKAGE_VERSION.

1999-05-01  Gert-Jan Paulissen  <g.paulissen@chello.nl>

        * For historical reasons, this is when I first started development
	with DBUG.
